# GUI-X

./: install.bat  server.ps1  start.bat  stop.bat
mx2lm-d3d12-fused-runtime/: CMakeLists.txt
mx2lm-d3d12-fused-runtime/assets/: test_scene.json
mx2lm-d3d12-fused-runtime/shaders/: adamw.hlsl  common.hlsli  debug_visualize.hlsl  fused_attention_force_moe.hlsl  grid_build.hlsl  lora.hlsli  prefix_sum.hlsl
mx2lm-d3d12-fused-runtime/spec/: deterministic_rules.md  execution_model.md  kernel_spec.md  memory_layout.md  scxq2_layout.md  tensor_graph_spec.md
mx2lm-d3d12-fused-runtime/src/: dx12_context.cpp  dx12_context.h  main.cpp
mx2lm-d3d12-fused-runtime/src/buffers/: buffer_manager.cpp  buffer_manager.h  structured_buffer.h
mx2lm-d3d12-fused-runtime/src/debug/: gpu_profiler.cpp  gpu_profiler.h  validation.cpp
mx2lm-d3d12-fused-runtime/src/graph/: graph_worker.js  sha256_runtime.js  tensor_graph.js  tensor_graph_schema.xml  tensor_kernel.wat  wasm_sandbox.js
mx2lm-d3d12-fused-runtime/src/kernels/: fused_dispatch.cpp  fused_dispatch.h  grid_dispatch.cpp  grid_dispatch.h
mx2lm-d3d12-fused-runtime/src/math/: dxmath_utils.h  vector_ops.h
mx2lm-d3d12-fused-runtime/src/pipeline/: pipeline_state.cpp  pipeline_state.h  root_signature.cpp  root_signature.h
mx2lm-d3d12-fused-runtime/src/runtime/: config.h  simulation.cpp  simulation.h  stream_manager.cpp  stream_manager.h
mx2lm-d3d12-fused-runtime/src/scxq2/: scxq2_layout.h  scxq2_loader.cpp  scxq2_loader.h
mx2lm-d3d12-fused-runtime/src/training/: adamw_gpu.cpp  adamw_gpu.h
mx2lm-d3d12-fused-runtime/tools/: compile_shaders.ps1  pack_scxq2.py  validate_buffers.py
